Formulario de contacto terminado

--- a/cooking_blog/templates/base.html
+++ b/cooking_blog/templates/base.html
@@ -29,6 +29,7 @@
         <nav class="nav justify-content-center  ">
             <a class="nav-link" href="{% url 'index' %}">Inicio</a>
             <a class="nav-link" href="{% url 'apps.posts:posts' %}">Posts</a>
+            <a class="nav-link" href="{% url 'apps.contacto:contacto' %}">Contacto</a>
         </nav>  
         
         </header>
