--- a/cooking_blog/templates/base.html
+++ b/cooking_blog/templates/base.html
@@ -30,6 +30,14 @@
             <a class="nav-link" href="{% url 'index' %}">Inicio</a>
             <a class="nav-link" href="{% url 'apps.posts:posts' %}">Posts</a>
             <a class="nav-link" href="{% url 'apps.contacto:contacto' %}">Contacto</a>
+            {% if user.is_authenticated %}
+                <form action="{% url 'logout' %}" method="post">
+                  {% csrf_token %}
+                  <button type="submit" class="btn btn-info">Logout</button>
+            </form>
+            {%else%}
+                <a class="nav-link" href="{% url 'apps.usuario:login' %}">Login</a>
+            {% endif %}
         </nav>  
         
         </header>
