--- a/cooking_blog/templates/base.html
+++ b/cooking_blog/templates/base.html
@@ -1,5 +1,5 @@
  {%load static %}
-
+{% load colaborador_tags%}
 <!doctype html>
 <html lang="es-ar">
     <head>
@@ -30,14 +30,53 @@
             <a class="nav-link" href="{% url 'index' %}">Inicio</a>
             <a class="nav-link" href="{% url 'apps.posts:posts' %}">Posts</a>
             <a class="nav-link" href="{% url 'apps.contacto:contacto' %}">Contacto</a>
-            {% if user.is_authenticated %}
-                <form action="{% url 'logout' %}" method="post">
-                  {% csrf_token %}
-                  <button type="submit" class="btn btn-info">Logout</button>
-            </form>
-            {%else%}
-                <a class="nav-link" href="{% url 'apps.usuario:login' %}">Login</a>
-            {% endif %}
+    <div class="dropdown">
+        {% if user.is_authenticated %}
+            <li>
+                <a href="{% url 'apps.usuario:logout' %}">
+                    {{ user.username }}: Logout
+                </a>
+            </li>
+
+            <div class="dropdown-content">
+                <table>
+                    <tr>
+                        {% if user.is_superuser or request.user|has_group:"Colaborador" %}
+                            <td>
+                                <a href="{% url 'apps.usuario:usuario_list' %}">
+                                    Lista de usuarios
+                                </a>
+                            </td>
+                        {% endif %}
+                    </tr>
+
+                    <tr>
+                        <td>
+                            <a href="#">
+                                Lista de categorias
+                            </a>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            <a href="#">
+                                Lista de posts
+                            </a>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+
+        {% else %}
+            <li>
+                <a href="{% url 'apps.usuario:login' %}">
+                    Login
+                </a>
+            </li>
+        {% endif %}
+</div>
+
         </nav>  
         
         </header>
