--- a/cooking_blog/templates/posts/posts.html
+++ b/cooking_blog/templates/posts/posts.html
@@ -1,8 +1,14 @@
 {%extends 'base.html'%}
-
+{% load static %}
+{% load colaborador_tags %}
 
 {%block contenido%}
-
+<div class="container-fluid" style="margin: 200px;">
+    {% if user.is_superuser or request.user|has_group:"Colaborador" %}
+    <div class="container-fluid" style="margin-top: 300px;">
+        <a id="boton_post" href="{% url 'apps.posts:crear_post' %}">Crear nuevo post</a>
+    </div>
+    {% endif %}
     {% for i in posts%}
         <br>
         <li>{{i.titulo}}</li>
@@ -21,4 +27,5 @@
         <h1>No hay registros</h1>
 
     {%endfor%}
+</div>
 {% endblock %}  
