--- a/cooking_blog/templates/comentario/crear_comentario.html
+++ b/cooking_blog/templates/comentario/crear_comentario.html
@@ -8,6 +8,12 @@
         <table>{{comentario.usuario}} - {{comentario.fecha}}</table>
         <ul class="w-100 list-unstyled d-flex justify-content-between mb-0">
                 <p>{{ comentario.texto }}</p>
+                {% if user.is_superuser or comentario.usuario == user %}
+                    <br><a id="boton_post" href="{%url 'apps.posts:comentario_editar' pk=comentario.pk %}?next={{request.path}}">Editar comentario</a>
+                {% endif %}
+                {% if user.is_superuser or comentario.usuario == user or request.user|has_group:"Colaborador" %}
+                 <br><a id="boton_post" href="{%url 'apps.posts:comentario_eliminar' pk=comentario.pk}"></a>
+                {% endif %}
                 <br><br>
         </ul>
         {% empty %}
