--- a/cooking_blog/templates/comentario/crear_comentario.html
+++ b/cooking_blog/templates/comentario/crear_comentario.html
@@ -1,3 +1,5 @@
+{% load colaborador_tags %}
+{% block contenido %}
 <center>
 <div class="container-fluid" style="margin-bottom: 20px;">
         <h4>Comentarios</h4>
@@ -12,7 +14,7 @@
                     <br><a id="boton_post" href="{%url 'apps.posts:comentario_editar' pk=comentario.pk %}?next={{request.path}}">Editar comentario</a>
                 {% endif %}
                 {% if user.is_superuser or comentario.usuario == user or request.user|has_group:"Colaborador" %}
-                 <br><a id="boton_post" href="{%url 'apps.posts:comentario_eliminar' pk=comentario.pk}"></a>
+                 <br><a id="boton_post" href="{% url 'apps.posts:comentario_eliminar' pk=comentario.pk %}">Eliminar comentario</a>
                 {% endif %}
                 <br><br>
         </ul>
@@ -39,3 +41,4 @@
         </form>
 </div>
 </center>
+{% endblock %}
