Implementando Frontend (Landing page)
Claudia implementó algunos cambios en la landing page (navbar/footer)

Co-Authored-By: claudiaazcona2021-jpg <242545536+claudiaazcona2021-jpg@users.noreply.github.com>

--- a/cooking_blog/templates/index.html
+++ b/cooking_blog/templates/index.html
@@ -1,5 +1,12 @@
 {%extends 'base.html'%}
 
 {%block contenido%}
-    <h1>Esta es la página index</h1>
+    <div class="p-0 bg-dark text-white" style="background-image: url('static/img/landing_bg.png'); background-size: cover; background-position: center; height: 150vh;">
+    <!-- Content goes here -->
+     <br><br><br>
+    <div class="container" style="margin-left: 45%; width: 700px;">
+        <h1>Recetas que nacen en casa y se cocinan con cariño</h1>
+        <p>Platos simples, sabores reales y tips de cocina para disfrutar todos los días, sin complicaciones.</p>
+    </div>
+</div>
 {% endblock %}
