--- a/cooking_blog/templates/base.html
+++ b/cooking_blog/templates/base.html
@@ -3,6 +3,25 @@
 <!doctype html>
 <html lang="es-ar">
     <head>
+        <style>
+            .dropdown {
+            position: relative;
+            }
+
+            .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            min-width: 130px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            padding: 12px 16px;
+            }
+
+            .dropdown:hover .dropdown-content {
+            display: block;
+            }
+            </style>
+
         <title>{%block title %} Título {% endblock title %}</title>
         {% load bootstrap5 %}
         {% bootstrap_css %}
@@ -25,75 +44,98 @@
 
     <body>
         <header>
-        <a class="flex-sm-fill text-sm-center nav-link active" href="#">
-            <img src="{%static 'img/info.png' %}" style="max-width: 300px; margin: 30px">
-        </a>
-        <nav class="nav justify-content-center  ">
-            <a class="nav-link" href="{% url 'index' %}">Inicio</a>
-            <a class="nav-link" href="{% url 'apps.posts:posts' %}">Posts</a>
-            <a class="nav-link" href="{% url 'apps.contacto:contacto' %}">Contacto</a>
-    <div class="dropdown">
-        {% if user.is_authenticated %}
-            <li>
-                <a href="{% url 'apps.usuario:logout' %}">
-                    {{ user.username }}: Logout
-                </a>
-            </li>
+        <nav style="background-color: #d6511d;display: flex; justify-content: space-between; align-items: center; width: 100%;">
+            <a href="#">
+            <img src="{%static 'img/nav_logo.png' %}" style="max-width: 200px;">
+            </a>
+            <div style="width: 200px;">
+                <a  href="{% url 'index' %}">Inicio</a>
+                <a  href="{% url 'apps.posts:posts' %}">Posts</a>
+                <a  href="{% url 'apps.contacto:contacto' %}">Contacto</a>
+            
+                <div class="dropdown">
+                {% if user.is_authenticated %}
+                    <a href="{% url 'apps.usuario:logout' %}">
+                            {{ user.username }}: Logout
+                        </a>
+                    <div class="dropdown-content">
+                        <table>
+                            <tr>
+                                {% if user.is_superuser or request.user|has_group:"Colaborador" %}
+                                    <td>
+                                        <a href="{% url 'apps.usuario:usuario_list' %}">
+                                            Lista de usuarios
+                                        </a>
+                                    </td>
+                                {% endif %}
+                            </tr>
 
-            <div class="dropdown-content">
-                <table>
-                    <tr>
-                        {% if user.is_superuser or request.user|has_group:"Colaborador" %}
-                            <td>
-                                <a href="{% url 'apps.usuario:usuario_list' %}">
-                                    Lista de usuarios
-                                </a>
-                            </td>
-                        {% endif %}
-                    </tr>
+                            <tr>
+                                <td>
+                                    <a href="#">
+                                        Lista de categorias
+                                    </a>
+                                </td>
+                            </tr>
 
-                    <tr>
-                        <td>
-                            <a href="#">
-                                Lista de categorias
-                            </a>
-                        </td>
-                    </tr>
+                            <tr>
+                                <td>
+                                    <a href="#">
+                                        Lista de posts
+                                    </a>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+            
+                {% else %}
+                    <a href="{% url 'apps.usuario:login' %}">
+                            Login
+                    </a>
 
-                    <tr>
-                        <td>
-                            <a href="#">
-                                Lista de posts
-                            </a>
-                        </td>
-                    </tr>
-                </table>
+                {% endif %}
+                </div>
             </div>
-
-        {% else %}
-            <li>
-                <a href="{% url 'apps.usuario:login' %}">
-                    Login
-                </a>
-            </li>
-        {% endif %}
-</div>
 
         </nav>  
         
         </header>
-        <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-        </div>
         {% block contenido %}
         {% endblock %}
         <footer>
-            <h2>This is a footer</h2>
+           <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<footer class="mt-auto" style="background-color: #d6511d;">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 mb-3">
+        <h5>About Us</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac ante mollis quam tristique convallis.</p>
+      </div>
+      <div class="col-md-4 mb-3">
+        <h5>Quick Links</h5>
+        <ul class="list-unstyled">
+          <li><a href="index.html" class="text-decoration-none text-white">Home</a></li>
+          <li><a href="#" class="text-decoration-none text-white">Services</a></li>
+          <li><a href="#" class="text-decoration-none text-white">Contact</a></li>
+        </ul>
+      </div>
+      <div class="col-md-4 mb-3">
+        <h5>Follow Us</h5>
+        <ul class="list-inline social-icons">
+          <li class="list-inline-item"><a href="#" class="text-white"><i class="bi bi-facebook"></i></a></li>
+          <li class="list-inline-item"><a href="#" class="text-white"><i class="bi bi-twitter"></i></a></li>
+          <li class="list-inline-item"><a href="#" class="text-white"><i class="bi bi-instagram"></i></a></li>
+        </ul>
+      </div>
+    </div>
+    <hr class="mb-4">
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <p>&copy; 2023 Your Company. All rights reserved.</p>
+      </div>
+    </div>
+  </div>
+</footer>
         </footer>
         <!-- Bootstrap JavaScript Libraries -->
         <script
