Landing page terminada y formulario de contacto terminado
Co-Authored-By: claudiaazcona2021-jpg <242545536+claudiaazcona2021-jpg@users.noreply.github.com>

--- a/cooking_blog/templates/contacto/contacto.html
+++ b/cooking_blog/templates/contacto/contacto.html
@@ -1,7 +1,10 @@
 {%extends 'base.html'%}
+{% load static %}
 
 {%block contenido%}
-    <center>
+
+    <div  class ="fondo">    
+    <div class="formulario_contacto">
         <form method="POST",style="margin:200px;">
             <h1>Formulario de contacto</h1>
             <br>
@@ -17,5 +20,6 @@
             <input type="submit" value="enviar">
         </form>
 
-    </center>
+    </div>
+    </div>
 {% endblock %}
