--- a/cooking_blog/templates/base.html
+++ b/cooking_blog/templates/base.html
@@ -3,29 +3,18 @@
 <!doctype html>
 <html lang="es-ar">
     <head>
-        <style>
-            .dropdown {
-            position: relative;
-            }
 
-            .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #f9f9f9;
-            min-width: 130px;
-            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-            padding: 12px 16px;
-            }
-
-            .dropdown:hover .dropdown-content {
-            display: block;
-            }
-            </style>
 
         <title>{%block title %} Título {% endblock title %}</title>
         {% load bootstrap5 %}
         {% bootstrap_css %}
         {% bootstrap_javascript %}
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&display=swap" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
         <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta
@@ -44,15 +33,12 @@
 
     <body>
         <header>
-        <nav style="background-color: #d6511d;display: flex; justify-content: space-between; align-items: center; width: 100%;">
-            <a href="#">
-            <img src="{%static 'img/nav_logo.png' %}" style="max-width: 200px;">
-            </a>
-            <div style="width: 200px;">
+        <nav class="barra_navegacion">
+            <a href="#"><img src="{%static 'img/nav_logo.png' %}" style="max-width: 200px;"></a>
+            <div class="nav_container">
                 <a  href="{% url 'index' %}">Inicio</a>
                 <a  href="{% url 'apps.posts:posts' %}">Posts</a>
                 <a  href="{% url 'apps.contacto:contacto' %}">Contacto</a>
-            
                 <div class="dropdown">
                 {% if user.is_authenticated %}
                     <a href="{% url 'apps.usuario:logout' %}">
@@ -87,7 +73,7 @@
                             </tr>
                         </table>
                     </div>
-            
+            </div>
                 {% else %}
                     <a href="{% url 'apps.usuario:login' %}">
                             Login
@@ -102,41 +88,40 @@
         </header>
         {% block contenido %}
         {% endblock %}
-        <footer>
-           <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-<footer class="mt-auto" style="background-color: #d6511d;">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4 mb-3">
-        <h5>About Us</h5>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac ante mollis quam tristique convallis.</p>
-      </div>
-      <div class="col-md-4 mb-3">
-        <h5>Quick Links</h5>
-        <ul class="list-unstyled">
-          <li><a href="index.html" class="text-decoration-none text-white">Home</a></li>
-          <li><a href="#" class="text-decoration-none text-white">Services</a></li>
-          <li><a href="#" class="text-decoration-none text-white">Contact</a></li>
-        </ul>
-      </div>
-      <div class="col-md-4 mb-3">
-        <h5>Follow Us</h5>
-        <ul class="list-inline social-icons">
-          <li class="list-inline-item"><a href="#" class="text-white"><i class="bi bi-facebook"></i></a></li>
-          <li class="list-inline-item"><a href="#" class="text-white"><i class="bi bi-twitter"></i></a></li>
-          <li class="list-inline-item"><a href="#" class="text-white"><i class="bi bi-instagram"></i></a></li>
-        </ul>
-      </div>
-    </div>
-    <hr class="mb-4">
-    <div class="row">
-      <div class="col-md-12 text-center">
-        <p>&copy; 2023 Your Company. All rights reserved.</p>
-      </div>
-    </div>
-  </div>
-</footer>
+
+        <footer class="mt-auto" style="background-color: #d6511d;">
+        <div class="container">
+            <div class="row">
+            <div class="col-md-4 mb-3">
+                <h5>Sobre nosotros</h5>
+                <p>Somos el grupo 3 de la comisión 6 del informatorio, espero que les guste nuestro blog 🧑‍🍳.</p>
+            </div>
+            <div class="col-md-4 mb-3">
+                <h5>Accesos rápidos</h5>
+                <ul class="list-unstyled">
+                <li><a href="{% url 'index' %}" class="text-decoration-none text-white">Inicio</a></li>
+                <li><a href="{% url 'apps.posts:posts' %}" class="text-decoration-none text-white">Posts</a></li>
+                <li><a href="{% url 'apps.contacto:contacto' %}" class="text-decoration-none text-white">Contacto</a></li>
+                </ul>
+            </div>
+            <div class="col-md-4 mb-3">
+                <h5>Nuestras redes</h5>
+                <ul class="list-inline social-icons">
+                <li class="list-inline-item"><a href="#" class="text-white"><i class="bi bi-facebook"></i></a></li>
+                <li class="list-inline-item"><a href="#" class="text-white"><i class="bi bi-twitter"></i></a></li>
+                <li class="list-inline-item"><a href="#" class="text-white"><i class="bi bi-instagram"></i></a></li>
+                </ul>
+            </div>
+            </div>
+            <hr class="mb-4">
+            <div class="row">
+            <div class="col-md-12 text-center">
+                <p>&copy; 2025 Grupo Nª3 - Comisión 6. Todos los derechos reservados.</p>
+            </div>
+            </div>
+        </div>
         </footer>
+
         <!-- Bootstrap JavaScript Libraries -->
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
