--- a/cooking_blog/static/css/styles.css
+++ b/cooking_blog/static/css/styles.css
@@ -96,3 +96,106 @@
     align-self: center;
     font-size: 50px;
 }
+
+.fondo_posts{
+    padding-top: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url('../img/background_default.png'); 
+    background-size: cover; 
+    background-position: center; 
+    height: 100vh;
+    border-bottom: solid 10px;
+    border-color: #5f2007;
+}
+
+
+.contenedor_posts{
+    margin-top: 30px;
+    margin-bottom: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 80%;
+    height: 100vh;
+    overflow: scroll;
+    -ms-overflow-style: none;  /* Internet Explorer and Edge */
+    scrollbar-width: none;     /* Firefox, Safari 18.2+, Chromium 121+ */
+
+}
+
+.tarjeta_receta{
+    margin: 10px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    background-color: white;
+    width: 300px;
+    height: 300px;
+    overflow: hidden;
+}
+
+.tarjeta_receta:hover{
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.tarjeta_receta img{
+    width: 100%;
+    height: 60%;
+    object-fit: cover; 
+}
+
+.info_tarjeta_contenedor{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.fondo_registro{
+    background-image: url('../img/contact_background.png'); 
+    background-size: cover; 
+    background-position: center; 
+    height: 100vh;
+    border-bottom: solid 10px;
+    border-color: #5f2007;
+}
+
+.alerta{
+    font-size: 100px;
+    display: flex;
+    align-items: center;
+    padding-top: 10px;
+    margin-left: 100px;
+}
+
+.contenedor_receta{
+    width: 500px;
+    height: 500px;
+    margin-left: 100px;
+    background-color: wheat;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 10px;
+    padding-bottom: 100px;
+    border-radius: 10px;
+    color:rgb(141, 27, 27);
+}
+
+
+.contenedor_receta img{
+    width: 100%;
+    border-radius: 10px;
+    object-fit: cover; 
+    height: 50%;
+    }
+
+.descripcion{
+    overflow: scroll;
+    height: 120px;
+
+}
+
+.fondo_comentarios{
+    background-color:#d6511d;
+    color:white;
+}
