--- a/cooking_blog/templates/comentario/crear_comentario.html
+++ b/cooking_blog/templates/comentario/crear_comentario.html
@@ -1,11 +1,11 @@
 {% load colaborador_tags %}
 {% block contenido %}
 <center>
-<div class="container-fluid" style="margin-bottom: 20px;">
+<div class="fondo_comentarios">
+        <br>
         <h4>Comentarios</h4>
         <br><br>
-</div>
-<div class="container-fluid" style="margin-bottom: 20px;">
+<div class="fondo_comentarios">
         {% for comentario in comentarios %}
         <table>{{comentario.usuario}} - {{comentario.fecha}}</table>
         <ul class="w-100 list-unstyled d-flex justify-content-between mb-0">
@@ -23,8 +23,9 @@
         {% endfor %}
 </div>
 <a id="comentario"></a>
-<div class="container-fluid" style="margin-bottom: 100px;">
-        <form method="POST" style="margin-bottom: 100px; margin-top: 100px;">
+<div class="fondo_comentarios">
+        <br>
+        <form method="POST">
                 {% csrf_token %}
                 {% if user.is_authenticated %}
                 <h2>Deja tu comentario</h2>
@@ -39,6 +40,7 @@
                 <input type="hidden" name="next" value="{{ request.path }}">
                 {% endif %}
         </form>
+        <br>
 </div>
 </center>
 {% endblock %}
