--- a/cooking_blog/templates/registration/login.html
+++ b/cooking_blog/templates/registration/login.html
@@ -4,15 +4,15 @@
 <title>{% block title %} Registro de usuario {% endblock title %}</title>
 
 {% block contenido %}
-<center>
-
-    <form method="POST" style="margin-top: 300px;">
-        <h1 class="h1">Iniciar sesión</h1>
+<div class="fondo_registro">
+<div class="formulario_registro">
+    <form method="POST">
+        <h1 class="h1" style="margin-left: 30px;">Iniciar sesión</h1>
         <br>
 
         <div class="messages">
             {% for message in messages %}
-                <table{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</table>
+                <h3 {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</h3>
             {% endfor %}
         </div>
 
@@ -29,10 +29,12 @@
             <a style="color: black;" href="{% url 'apps.usuario:password_reset' %}">
                 Olvidaste tu contraseña?
             </a>
-            <button type="submit" class="btn btn-success btn-lg px-3">
+            <br>
+            <button type="submit" class="btn btn-warning btn-lg px-3">
                 Iniciar sesión
             </button>
         </div>
         </form>
-</center>
+    </div>
+</div>
 {% endblock %}
