--- a/cooking_blog/templates/registration/logout.html
+++ b/cooking_blog/templates/registration/logout.html
@@ -3,13 +3,13 @@
 {%load static %}
 
 {% block contenido %}
-<center>
-    <div class="container" style="margin-top: 370px;">
+<div class="fondo">
+    <div class="alerta">
         <div class="messages">
             {%for message in messages %}
-                <table{%if message.tags%} class="{{message.tags}}"{% endif %}>{{message}}</table>
+                <h3{%if message.tags%} class="{{message.tags}}"{% endif %}>{{message}}</h3>
             {% endfor %}
         </div>
     </div>
-</center>
+</div>
 {% endblock %}
