--- a/cooking_blog/templates/posts/categoria_confirm_delete.html
+++ b/cooking_blog/templates/posts/categoria_confirm_delete.html
@@ -2,7 +2,7 @@
 {% block contenido %}
 
 <center>
-    <div class="container-fluid" style="margin:300px;">
+    <div class="container-fluid">
     <h1>Eliminar categoría</h1>
     <p>¿Estás seguro de que quieres eliminar la categoria ""{{object.nombre}}?</p>
         <form method="POST">
