--- a/cooking_blog/templates/posts/categoria_list.html
+++ b/cooking_blog/templates/posts/categoria_list.html
@@ -2,10 +2,10 @@
 {% block contenido %}
 
 <center>
-    <div class="container-fluid" style="margin:200px;">
+    <div>
     <h1>Categorías</h1>
     <br>
-    <ul>
+    <ul style="list-style: none;">
         {% for categoria in categorias %}
         <li>{{categoria.nombre}}
         (<a style="color:black;" href="{% url 'apps.posts:categoria_delete' pk=categoria.pk %}">Eliminar</a>)
