--- a/cooking_blog/templates/posts/crear_categoria.html
+++ b/cooking_blog/templates/posts/crear_categoria.html
@@ -2,14 +2,14 @@
 {% block contenido %}
 
 <center>
-    <div class="container-fluid" style="margin:200px;">
+    <div class="container-fluid">
     <h1>Agregar nueva categoría</h1>
     <form method="POST">
         {%csrf_token%}
         {{ form.as_p}}
         <input type="submit" value="Agregar">
     </form>
-    <div class="container-fluid" style="margin:200px;">
+    <div class="container-fluid">
         <a id="boton_post" href="{% url 'apps.posts:categoria_list' %}">Listar todas las categorias</a>
     </div>
 
