--- a/cooking_blog/templates/posts/posts.html
+++ b/cooking_blog/templates/posts/posts.html
@@ -5,6 +5,12 @@
 {%block contenido%}
 <div class="fondo_posts">
     <h1>Recetas</h1>
+    <h2>Ordenar por: </h2>
+    <ul>
+        <a id="boton_post" href="{% url 'apps.posts:posts' %}?orden=reciente">Más reciente</a> 
+        <a id="boton_post" href="{% url 'apps.posts:posts' %}?orden=antiguo">Más antiguo</a> 
+        <a id="boton_post" href="{% url 'apps.posts:posts' %}?orden=alfabetico">Orden alfabético</a> 
+    </ul>
     {% if user.is_superuser or request.user|has_group:"Colaborador" %}
         <div>
             <a class="btn btn-warning" id="boton_post" href="{% url 'apps.posts:crear_post' %}">Crear nuevo post</a>
