--- a/cooking_blog/templates/registration/registrar.html
+++ b/cooking_blog/templates/registration/registrar.html
@@ -6,7 +6,7 @@
 {% block contenido %}
 <center>
 
-    <form method="POST" enctype="multipart/form-data" style="margin-top: 300px; margin-bottom: 100px;">
+    <form method="POST" enctype="multipart/form-data">
         <h1 class="h1">Registro de usuarios</h1>
         <br>
 
