--- a/cooking_blog/templates/base.html
+++ b/cooking_blog/templates/base.html
@@ -5,7 +5,7 @@
     <head>
 
 
-        <title>{%block title %} Título {% endblock title %}</title>
+        <title>{%block title %} Cheff Kiss {% endblock title %}</title>
         {% load bootstrap5 %}
         {% bootstrap_css %}
         {% bootstrap_javascript %}
@@ -87,7 +87,7 @@
         {% block contenido %}
         {% endblock %}
 
-        <footer class="mt-auto" style="background-color: #d6511d;">
+        <footer class="mt-auto" style="background-color: #d6511d; padding: 10px;">
         <div class="container">
             <div class="row">
             <div class="col-md-4 mb-3">
