--- a/cooking_blog/templates/posts/posts.html
+++ b/cooking_blog/templates/posts/posts.html
@@ -4,18 +4,21 @@
 
 {%block contenido%}
 <div class="fondo_posts">
+    <div class="cartel">
     <h1>Recetas</h1>
     <h2>Ordenar por: </h2>
-    <ul>
-        <a id="boton_post" href="{% url 'apps.posts:posts' %}?orden=reciente">Más reciente</a> 
-        <a id="boton_post" href="{% url 'apps.posts:posts' %}?orden=antiguo">Más antiguo</a> 
-        <a id="boton_post" href="{% url 'apps.posts:posts' %}?orden=alfabetico">Orden alfabético</a> 
-    </ul>
-    {% if user.is_superuser or request.user|has_group:"Colaborador" %}
-        <div>
-            <a class="btn btn-warning" id="boton_post" href="{% url 'apps.posts:crear_post' %}">Crear nuevo post</a>
+    <div style="display: flex;flex-direction: column; align-items: center;">
+        <div style="display: flex; flex-direction: row; width: 800px;justify-content: space-around;">
+            <a class="boton_menus" id="boton_post" href="{% url 'apps.posts:posts' %}?orden=reciente">Más reciente</a> 
+            <a class="boton_menus" id="boton_post" href="{% url 'apps.posts:posts' %}?orden=antiguo">Más antiguo</a> 
+            <a class="boton_menus" id="boton_post" href="{% url 'apps.posts:posts' %}?orden=alfabetico">Orden alfabético</a> 
         </div>
+    {% if user.is_superuser or request.user|has_group:"Colaborador" %}  
+        <a class="boton_menus" style="margin-top: 10px; width: 200px; background-color: rgb(255, 167, 36);" id="boton_post" href="{% url 'apps.posts:crear_post' %}">Crear nuevo post</a>
+    </div>
     {% endif %}
+    </div>
+
     <div class="contenedor_posts">
 
         {% for i in posts%}
@@ -25,14 +28,8 @@
                 <div class="info_tarjeta_contenedor">
                     <h3>{{i.titulo}}</h3>
                     <h7>Categoría: {{i.categoria}}<h7>
-                    <a
-                        name=""
-                        id=""
-                        class="btn btn-warning"
-                        href="{% url 'apps.posts:post_individual' i.id %}"
-                        role="button"
-                        >Ir a receta</a>
-                    </div>
+                    <a class="boton_menus" href="{% url 'apps.posts:post_individual' i.id %}" role="button">Ir a receta</a>
+                </div>
             </div>
             
             {% empty %}
