--- a/cooking_blog/templates/registration/password_reset_done.html
+++ b/cooking_blog/templates/registration/password_reset_done.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block contenido %}
-<center>
+<center class="fondo_default">
     <h2>Correo electrónico enviado</h2>
     <p>Se ha enviado un correo electrónico con instrucciones para reestablecer tu contraseña.</p>
 </center>
