--- a/cooking_blog/templates/registration/registrar.html
+++ b/cooking_blog/templates/registration/registrar.html
@@ -4,7 +4,7 @@
 <title>{% block title %} Registro de usuario {% endblock title %}</title>
 
 {% block contenido %}
-<center>
+<center class="fondo_default">
 
     <form method="POST" enctype="multipart/form-data">
         <h1 class="h1">Registro de usuarios</h1>
@@ -28,6 +28,8 @@
             Registrar
         </button>
     </form>
-
+    <br>
+    <br>
+    <br>
 </center>
 {% endblock %}
