--- a/cooking_blog/templates/posts/categoria_list.html
+++ b/cooking_blog/templates/posts/categoria_list.html
@@ -1,10 +1,9 @@
 {%extends 'base.html'%}
 {% block contenido %}
 
-<center>
-    <div>
+<center class="fondo_settings">
+    <div class="fondo_lista_categorias">
     <h1>Categorías</h1>
-    <br>
     <ul style="list-style: none;">
         {% for categoria in categorias %}
         <li>{{categoria.nombre}}
@@ -15,5 +14,7 @@
         {% endfor %}
     </ul>
     </div>
+<br><br><br><br>
 </center>
+
 {% endblock %}
