--- a/cooking_blog/templates/registration/password_reset_complete.html
+++ b/cooking_blog/templates/registration/password_reset_complete.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block contenido %}
-<center>
+<center class="fondo_default">
     <h2>Contraseña restablecida</h2>
     <p>Tu contraseña se ha restablecido correctamente.</p>
 </center>
