--- a/cooking_blog/templates/registration/password_reset_confirm.html
+++ b/cooking_blog/templates/registration/password_reset_confirm.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block contenido %}
-<center>
+<center class="fondo_default">
     <h2>Restablecer contraseña</h2>
     <form method="POST">
         {% csrf_token %}
