--- a/cooking_blog/templates/posts/modificar_post.html
+++ b/cooking_blog/templates/posts/modificar_post.html
@@ -2,8 +2,8 @@
 
 {% block contenido %}
 
-<center>
-<div class="container-fluid" style="margin: 30px;">
+<center class="fondo_default">
+<div >
     <a id="boton_post"
        href="{% url 'apps.posts:crear_categoria' %}?next={% url 'apps.posts:post_update' pk=object.id %}">
         Crear nueva categoria
